apps/paperless/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`paperless.local.cvsickle.com`)
      kind: Rule
      services:
        - name: paperless
          port: 8000
          sticky:
            cookie:
              name: paperless_affinity
              httpOnly: true
              secure: true
    - match: Host(`paperless.cvsickle.com`)
      kind: Rule
      services:
        - name: paperless
          port: 8000
          sticky:
            cookie:
              name: paperless_affinity_external
              httpOnly: true
              secure: true
